--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 
 .player{
-  /* margin-top: 10px ; */
   background:#ff3014;
   border-radius: 10px;
 }
 .comp{
-  /* margin: 10px ; */
-  background:#130852;
-  /* color:white; */
+  background:#130852; 
   border-radius: 20px;
 }
+
+/*.addon{
+  background:#00ff55;
+  border-radius: 50%;
+}*/
 
 .cbg{
   background: #d00520;
